# conference_2025

./: .dockerignore  .gitignore  Dockerfile  test.py  vllm.py  vllm_test.py  x.create_planner.json  x.create_quiz.json  x.evaluate_quiz.json
DB/: docker-compose.yml
SOUP/: main.py  pyproject.toml  start_server.sh
SOUP/api/v1/: routers.py
SOUP/api/v1/endpoints/: grade.py  grade_original.py  ocr.py  planner.py  quiz.py
SOUP/graphs/: CreatePlannerGraph.py  __init__.py  main_graph.py  planner_graph.py  quiz_graph.py  sub_graph.py
SOUP/graphs/nodes/: __init__.py  data_check_node.py  generate_planner_node.py  generate_quiz_node.py  prompts.py  recent_planner_analyze_node.py  recent_quiz_analyze.py  recent_quiz_analyze_node.py  student_check_node.py
SOUP/graphs/states/: __init__.py  planner_state.py  quiz_state.py
SOUP/schema/: __init__.py  create_payload.py  grade_schema.py  ocr_schema.py  payload_schema.py
SOUP/utils/: __init__.py  db_utils.py  grade_utils.py  graph_utils.py  llm_utils.py  ocr_utils.py
custom_lib/: __init__.py
custom_lib/WantUtil/: WantUtil.py
graphs/: PlannerGenerationGraph.py  main_graph.py
